errors.txt
error[E0432]: unresolved import `iced::widget::center`
 --> src/main.rs:4:28
  |
4 | use iced::widget::{button, center, column, row, text};
  |                            ^^^^^^ no `center` in `widget`

error: cannot find macro `text` in this scope
  --> src/main.rs:95:24
   |
95 |         let duration = text!(
   |                        ^^^^
   |
note: `text` is imported here, but it is a module, not a macro
  --> src/main.rs:4:49
   |
4  | use iced::widget::{button, center, column, row, text};
   |                                                 ^^^^

error[E0423]: expected function, found module `iced::application`
  --> src/main.rs:10:5
   |
10 |     iced::application("Stopwatch - Iced", Stopwatch::update, Stopwatch::view)
   |     ^^^^^^^^^^^^^^^^^ not a function

error[E0425]: cannot find value `danger` in module `button`
   --> src/main.rs:122:28
    |
122 |             .style(button::danger)
    |                            ^^^^^^ not found in `button`

Some errors have detailed explanations: E0423, E0425, E0432.